# django-markdown

./: Makefile  README.md  pyproject.toml
core/: settings.py  urls.py
posts/: admin.py  markdown_extensions.py  models.py  views.py
posts/migrations/: 0001_initial.py  0002_post_slug.py
posts/templatetags/: post_filters.py
templates/posts/: detail.html
