[tool.poetry]
name = "core"
version = "0.1.0"
description = "This is a demonstration of how to render markdown in the Django application."
authors = ["Chien Chuan"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
